@@ -13,6 +13,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #27238: Got rid of bare excepts in the turtle module.  Original patch
+  by Jelle Zijlstra.
+
 - Issue #27122: When an exception is raised within the context being managed
   by a contextlib.ExitStack() and one of the exit stack generators
   catches and raises it in a chain, do not re-raise the original exception
